# mesh-inspector-cpp

./: .gitignore  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  questions.txt.bak
backend/: BUILD  CMakeLists.txt
backend/src/: main.cpp
backend/src/core/: AABB.cpp  AABB.h  Triangle.h  Vector3.cpp  Vector3.h
backend/src/geometry/: AreaCalculator.cpp  AreaCalculator.h  VolumeCalculator.cpp  VolumeCalculator.h
backend/src/parser/: STLParser.cpp  STLParser.h
backend/tests/: stl_generator.cpp  test_area.cpp  test_volume.cpp
frontend/: index.html  package.json  server.js  styles.css
frontend/src/: api.js  main.js  ui.js  uploader.js  viewer.js
scripts/: build.sh  run.sh
